--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Project Start</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum expedita esse minus eos unde commodi dignissimos ullam aliquid optio quasi?</p>
 </body>
 </html>
